--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,6 +6,7 @@
     <title>Real time chat app</title>
     <link rel="stylesheet" href="styles/output.css">
     <link rel="stylesheet" href="styles/chatbox.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body class="bg-white text-black w-full">
     <div class="background-container">
@@ -20,10 +21,12 @@
         </ul>
     </nav>
     
-    <div class="fixed top-[10vh] md:left-[25vw] left-[2vw] backdrop-blur-sm bg-white bg-opacity-45 shadow-lg md:max-h-[80vh] max-h-[90vh] md:w-[50vw] w-[96vw] rounded-lg overflow-hidden z-20 border border-gray-200">
-        <div class="bg-red-500 text-white py-3 px-4 text-xl font-semibold">
-            Chat Room
+    <div class="fixed top-[10vh] md:left-[25vw] left-[2vw] backdrop-blur-sm bg-white bg-opacity-45 shadow-lg md:max-h-[80vh] max-h-[90vh] md:w-[50vw] w-[96vw] rounded-lg overflow-hidden z-20 border border-gray-200 shadow-zinc-900">
+        <div class="flex gap-2 bg-zinc-500 shadow-md shadow-red-300 bg-opacity-15 text-black items-center py-3 px-4 text-xl font-semibold">
+            <i class='bx bxs-chat text-2xl text-red-500'></i>
+           <h3>Chat Room</h3>
         </div>
+        <!-- <div class="h-0.5 bg-red-500 w-full"></div> -->
         <ul id="messageBox" class="p-4 overflow-y-auto space-y-2">
             <% if (response[1].length === 0) { %>
                 <li class="text-center text-gray-900"></li>
