--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     
-    <div class="fixed top-[10vh] md:left-[25vw] left-[2vw] backdrop-blur-sm bg-white bg-opacity-45 shadow-lg md:max-h-[80vh] max-h-[90vh] md:w-[50vw] w-[96vw] rounded-lg overflow-hidden z-20 border border-gray-200 shadow-zinc-900">
+    <div class="fixed top-[10vh] md:left-[25vw] left-[2vw] backdrop-blur-sm bg-white bg-opacity-45 shadow-md md:max-h-[80vh] max-h-[90vh] md:w-[50vw] w-[96vw] rounded-lg overflow-hidden z-20 border border-gray-200 shadow-zinc-700">
         <div class="flex justify-between bg-zinc-500 shadow-md shadow-red-300 bg-opacity-15 text-black items-center py-3 px-4 text-xl font-semibold">
             <div class="flex gap-2 items-center">
                 <i class='bx bxs-chat text-2xl text-red-500'></i>
@@ -46,7 +46,7 @@
         </ul>
         <div id="typingIndicator" class="hidden text-gray-500 text-sm px-4 py-2"></div>
         <form class="p-2 flex items-center">
-            <input type="text" placeholder="Enter your message" class="flex-1 p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-red-500 transition duration-300 ease-in-out">
+            <input type="text" placeholder="Enter your message" class="flex-1 p-2 border bg-white border-gray-500  rounded-lg focus:outline-none focus:border-red-500 transition duration-300 ease-in-out">
             <button type="submit" class="">
                 <i class='bx bxs-send ml-3 p-2 shadow-lg shadow-zinc-700 text-3xl bg-red-500 text-white rounded-full hover:bg-red-600 transition duration-300 ease-in-out'></i>
             </button>
