organise code base

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,9 @@
         <h1>Chatify</h1>
         <ul class="flex gap-4 pl-4 text-xl">
             <li>Join us</li>
-            <li>Chat Rooms</li>
+            <a href="/room">
+                <li>Chat Rooms</li>
+            </a>
         </ul>
     </nav>
     <div class="flex w-full flex-wrap-reverse items-center mt-[2vh] p-8 justify-between">
