--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -17,7 +17,9 @@
         <a href="/"><h1>Chatify</h1></a>
         <ul class="flex gap-4 pl-4 text-xl">
             <li>Join us</li>
-            <li>Chat Rooms</li>
+            <a href="/room">
+                <li>Chat Rooms</li>
+            </a>
         </ul>
     </nav>
     
