implement chat rooms

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,13 +22,16 @@
             <p class="md:text-lg text-base md:pr-20 pr-0 font-semibold text-zinc-600">
                 Chatify is a cutting-edge real-time chat application developed using Node.js, MongoDB, Socket.io, and Tailwind CSS. Our platform allows users to engage in anonymous conversations with others on the server seamlessly. Experience instant messaging with no delays, Chatify ensures your privacy and security. Simply enter your desired username to join the chat and start engaging with others. We encourage a respectful and inclusive environment for all users. Enjoy Chatify and happy chatting!
             </p>
-            <form action="/chat" method="post" class="flex flex-col items-center gap-4 mt-8 md:flex-row">
+            <form id="chatForm" method="post" class="flex flex-col items-center gap-4 mt-8 md:flex-row">
                 <input 
                     type="text" 
                     name="username"
                     placeholder="Pick a username" 
                     class="py-3 px-4 text-lg rounded-md border border-gray-300 focus:outline-none focus:border-2 focus:border-red-500 transition duration-300 ease-in-out shadow-sm w-full md:w-auto"
                 >
+                <select name="room" id="roomSelect" class="bg-white w-full md:w-auto border border-gray-300 rounded-lg py-3 px-4 text-gray-700">
+                </select>
+                
                 <button 
                     type="submit" 
                     class="py-3 px-6 rounded-md bg-red-500 text-lg font-semibold text-white hover:bg-red-600 transition duration-300 ease-in-out shadow-md w-full md:w-auto"
@@ -42,15 +45,24 @@
             <img src="/images/banner.png" alt="banner">
         </div>
     </div>
+    <script src="/scripts/handlePopulateOptions.js"></script>
     <script>
         window.addEventListener('load', () => {
-            const msgbox = document.getElementById('msgbox')
+            const msgbox = document.getElementById('msgbox');
             const urlParams = new URLSearchParams(window.location.search);
             const message = urlParams.get('message');
             if (message) {
                 msgbox.innerHTML = decodeURIComponent(message);
-                setTimeout(() => msgbox.innerHTML = '', 1500)
+                setTimeout(() => msgbox.innerHTML = '', 1500);
             }
+        });
+        
+        document.getElementById('chatForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const form = e.target;
+            const room = document.getElementById('roomSelect').value;
+            form.action = `/chat/${room}`;
+            form.submit();
         });
     </script>
 </body>
