--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real time chat app</title>
-    <link rel="stylesheet" href="styles/output.css">
-    <link rel="stylesheet" href="styles/chatbox.css">
+    <link rel="stylesheet" href="/styles/output.css">
+    <link rel="stylesheet" href="/styles/chatbox.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body class="bg-white text-black w-full">
     <div class="background-container">
-        <img src="images/chat.jpg" alt="banner">
+        <img src="/images/chat.jpg" alt="banner">
         <div class="overlay"></div>
     </div>
     <nav class="absolute z-40 top-0 left-0 w-full bg-red-500 flex items-center justify-between p-3 text-3xl text-white font-semibold">
@@ -27,10 +27,10 @@
         <div class="flex justify-between bg-zinc-500 shadow-md shadow-red-300 bg-opacity-15 text-black items-center py-3 px-4 text-xl font-semibold">
             <div class="flex gap-2 items-center">
                 <i class='bx bxs-chat text-2xl text-red-500'></i>
-                <h3>Chat Room</h3>
+                <h3 id="roomVal"></h3>
             </div>
             <a href="/logout">
-                <button><i class='bx bx-log-out text-3xl bg-red-500 p-1 text-zinc-200 font-semibold rounded-md shadow-md shadow-zinc-400'></i></button>
+                <button id="logoutBtn"><i class='bx bx-log-out text-3xl bg-red-500 p-1 text-zinc-200 font-semibold rounded-md shadow-md shadow-zinc-400'></i></button>
             </a>
         </div>
         <ul id="messageBox" class="p-4 overflow-y-auto space-y-2">
@@ -57,17 +57,21 @@
     
     <script src="/socket.io/socket.io.js"></script>
     <script>
+        const userId = "<%= response[0] %>";
+        let roomName = localStorage.getItem('roomName') || "<%= response[2] %>";
+        const roomVal = document.getElementById('roomVal').innerHTML = roomName;
+        localStorage.setItem('roomName', roomName);
+    
         const socket = io();
-        const userId = "<%= response[0]%>";
-
-        socket.emit('user connected', userId);
-
+    
+        socket.emit('user connected', { userId, roomName });
+    
         const form = document.querySelector('form');
         const input = document.querySelector('input');
         const msgBox = document.getElementById('messageBox');
         const typingIndicator = document.getElementById('typingIndicator');
         let typingTimeout;
-
+    
         socket.on('chat message', (msg) => {
             const item = document.createElement('li');
             item.classList.add('message');
@@ -82,7 +86,7 @@
             msgBox.appendChild(item);
             msgBox.scrollTop = msgBox.scrollHeight;
         });
-
+    
         socket.on('user join', (response) => {
             const item = document.createElement('li');
             item.classList.add('connect');
@@ -90,7 +94,7 @@
             msgBox.appendChild(item);
             msgBox.scrollTop = msgBox.scrollHeight;
         });
-
+    
         socket.on('user left', (response) => {
             const item = document.createElement('li');
             item.classList.add('disconnect');
@@ -98,29 +102,29 @@
             msgBox.appendChild(item);
             msgBox.scrollTop = msgBox.scrollHeight;
         });
-
+    
         socket.on('typing', (userId) => {
             typingIndicator.textContent = `${userId} is typing...`;
             typingIndicator.classList.remove('hidden');
         });
-
+    
         socket.on('stop typing', () => {
             typingIndicator.classList.add('hidden');
         });
-
+    
         form.addEventListener('submit', (e) => {
             e.preventDefault();
             if (input.value) {
                 const messageBody = {
                     message: input.value,
-                    userId: userId
+                    userId: userId,
                 };
                 socket.emit('chat message', messageBody);
                 socket.emit('stop typing', userId);
                 input.value = '';
             }
         });
-
+    
         input.addEventListener('input', () => {
             socket.emit('typing', userId);
             clearTimeout(typingTimeout);
@@ -128,6 +132,10 @@
                 socket.emit('stop typing', userId);
             }, 3000);
         });
+
+        document.getElementById('logoutBtn').addEventListener('click', () =>  localStorage.removeItem('roomName'))
+    
     </script>
+    
 </body>
 </html>
