--- a/public/styles/chatbox.css
+++ b/public/styles/chatbox.css
@@ -31,7 +31,7 @@
 
 .message {
     padding: 0.5rem;
-    background-color: #fff;
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(249,183,183,1) 100%);
     border-radius: 0.5rem;
     box-shadow: -1px 3px 2px 0px rgba(0, 0, 0, 0.2);
     max-width: 60%;
@@ -40,7 +40,7 @@
 }
 
 .message.sent {
-    background-color: #f75353;
+    background: linear-gradient(180deg, rgba(239,140,140,1) 0%, rgb(236, 52, 52) 100%);
     color: #ffffff;
     align-self: flex-end;
 }
