--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -570,6 +570,10 @@ video {
   left: 2vw;
 }
 
+.left-\[35\%\] {
+  left: 35%;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -582,48 +586,148 @@ video {
   top: 8vh;
 }
 
-.left-\[50\] {
-  left: 50;
+.top-\[9\.5vh\] {
+  top: 9.5vh;
 }
 
-.left-\[50\%\] {
-  left: 50%;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[4vh\] {
-  top: 4vh;
-}
-
-.top-\[9vh\] {
-  top: 9vh;
-}
-
-.top-\[12vh\] {
-  top: 12vh;
-}
-
-.left-\[20\%\] {
-  left: 20%;
-}
-
-.left-\[40\%\] {
-  left: 40%;
-}
-
-.left-\[35\%\] {
-  left: 35%;
+.top-\[20vh\] {
+  top: 20vh;
 }
 
 .top-\[10vh\] {
   top: 10vh;
 }
 
-.top-\[9\.5vh\] {
-  top: 9.5vh;
+.top-\[1vh\] {
+  top: 1vh;
+}
+
+.top-\[15vh\] {
+  top: 15vh;
+}
+
+.top-\[4vh\] {
+  top: 4vh;
+}
+
+.top-\[7\.5vh\] {
+  top: 7.5vh;
+}
+
+.top-\[9vh\] {
+  top: 9vh;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.top-\[12vh\] {
+  top: 12vh;
+}
+
+.top-\[vh\] {
+  top: vh;
+}
+
+.top-\[7vh\] {
+  top: 7vh;
+}
+
+.left-\[22vw\] {
+  left: 22vw;
+}
+
+.top-\[2vh\] {
+  top: 2vh;
+}
+
+.right-\[10vw\] {
+  right: 10vw;
+}
+
+.right-\[10px\] {
+  right: 10px;
+}
+
+.right-\[5px\] {
+  right: 5px;
+}
+
+.right-\[5vw\] {
+  right: 5vw;
+}
+
+.right-\[2vw\] {
+  right: 2vw;
+}
+
+.right-\[0vw\] {
+  right: 0vw;
+}
+
+.left-\[-2vw\] {
+  left: -2vw;
+}
+
+.left-\[-4vw\] {
+  left: -4vw;
+}
+
+.left-\[-3\.5vw\] {
+  left: -3.5vw;
+}
+
+.left-\[\] {
+  left: ;
+}
+
+.left-\[3vw\] {
+  left: 3vw;
+}
+
+.left-\[6vw\] {
+  left: 6vw;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-\[-1vw\] {
+  left: -1vw;
+}
+
+.left-\[-3vw\] {
+  left: -3vw;
+}
+
+.left-\[-4\.5vw\] {
+  left: -4.5vw;
+}
+
+.top-\[-2vh\] {
+  top: -2vh;
+}
+
+.top-\[6vh\] {
+  top: 6vh;
+}
+
+.top-\[20px\] {
+  top: 20px;
+}
+
+.top-\[40px\] {
+  top: 40px;
+}
+
+.top-\[50px\] {
+  top: 50px;
+}
+
+.top-\[45px\] {
+  top: 45px;
 }
 
 .z-10 {
@@ -632,6 +736,18 @@ video {
 
 .z-20 {
   z-index: 20;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.-z-10 {
+  z-index: -10;
 }
 
 .m-4 {
@@ -686,28 +802,16 @@ video {
   min-height: 100vh;
 }
 
+.w-\[20vw\] {
+  width: 20vw;
+}
+
 .w-\[96vw\] {
   width: 96vw;
 }
 
 .w-full {
   width: 100%;
-}
-
-.w-\[30vw\] {
-  width: 30vw;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[10vw\] {
-  width: 10vw;
-}
-
-.w-\[20vw\] {
-  width: 20vw;
 }
 
 .max-w-md {
@@ -788,20 +892,6 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-t-sm {
-  border-top-left-radius: 0.125rem;
-  border-top-right-radius: 0.125rem;
-}
-
-.rounded-b-sm {
-  border-bottom-right-radius: 0.125rem;
-  border-bottom-left-radius: 0.125rem;
-}
-
 .rounded-b-md {
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -813,14 +903,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .border-gray-200 {
@@ -843,21 +925,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-zinc-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(24 24 27 / var(--tw-border-opacity));
-}
-
-.border-zinc-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(212 212 216 / var(--tw-border-opacity));
-}
-
-.border-zinc-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(82 82 91 / var(--tw-border-opacity));
-}
-
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -875,6 +942,14 @@ video {
 
 .bg-opacity-45 {
   --tw-bg-opacity: 0.45;
+}
+
+.bg-opacity-80 {
+  --tw-bg-opacity: 0.8;
+}
+
+.bg-opacity-95 {
+  --tw-bg-opacity: 0.95;
 }
 
 .p-0 {
@@ -905,6 +980,11 @@ video {
   padding: 2rem;
 }
 
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -913,6 +993,11 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .py-2 {
@@ -925,19 +1010,9 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pl-4 {
@@ -1039,6 +1114,11 @@ video {
   color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
+.text-zinc-700 {
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+
 .text-zinc-800 {
   --tw-text-opacity: 1;
   color: rgb(39 39 42 / var(--tw-text-opacity));
@@ -1054,14 +1134,10 @@ video {
   color: rgb(9 9 11 / var(--tw-text-opacity));
 }
 
-.text-zinc-500 {
-  --tw-text-opacity: 1;
-  color: rgb(113 113 122 / var(--tw-text-opacity));
-}
-
-.text-zinc-700 {
-  --tw-text-opacity: 1;
-  color: rgb(63 63 70 / var(--tw-text-opacity));
+.shadow-inner {
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-lg {
@@ -1082,16 +1158,9 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-inner {
-  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.shadow-zinc-300 {
+  --tw-shadow-color: #d4d4d8;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .shadow-zinc-500 {
@@ -1114,39 +1183,19 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-zinc-600 {
-  --tw-shadow-color: #52525b;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-zinc-300 {
-  --tw-shadow-color: #d4d4d8;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-zinc-400 {
-  --tw-shadow-color: #a1a1aa;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-zinc-200 {
-  --tw-shadow-color: #e4e4e7;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
-.backdrop-blur-sm {
-  --tw-backdrop-blur: blur(4px);
+.backdrop-blur-md {
+  --tw-backdrop-blur: blur(12px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.backdrop-blur-md {
-  --tw-backdrop-blur: blur(12px);
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -1159,8 +1208,18 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
 }
 
 .ease-in-out {
@@ -1251,6 +1310,12 @@ video {
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
 }
 
+@media (min-width: 640px) {
+  .sm\:left-\[\] {
+    left: ;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:left-\[25vw\] {
     left: 25vw;
@@ -1258,6 +1323,66 @@ video {
 
   .md\:top-\[10vh\] {
     top: 10vh;
+  }
+
+  .md\:top-\[\] {
+    top: ;
+  }
+
+  .md\:top-\[20\] {
+    top: 20;
+  }
+
+  .md\:top-\[20vh\] {
+    top: 20vh;
+  }
+
+  .md\:top-\[4vh\] {
+    top: 4vh;
+  }
+
+  .md\:top-0 {
+    top: 0px;
+  }
+
+  .md\:top-\[9\.5vh\] {
+    top: 9.5vh;
+  }
+
+  .md\:top-\[9vh\] {
+    top: 9vh;
+  }
+
+  .md\:left-\[\] {
+    left: ;
+  }
+
+  .md\:left-\[50vw\] {
+    left: 50vw;
+  }
+
+  .md\:left-\[30vw\] {
+    left: 30vw;
+  }
+
+  .md\:left-\[20vw\] {
+    left: 20vw;
+  }
+
+  .md\:left-\[22vw\] {
+    left: 22vw;
+  }
+
+  .md\:left-\[-3\.5vw\] {
+    left: -3.5vw;
+  }
+
+  .md\:left-\[-4\.5vw\] {
+    left: -4.5vw;
+  }
+
+  .md\:left-\[-2\.5vw\] {
+    left: -2.5vw;
   }
 
   .md\:max-h-\[80vh\] {
@@ -1292,6 +1417,12 @@ video {
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .md\:backdrop-blur-md {
+    --tw-backdrop-blur: blur(12px);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+    backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   }
 }
 
